# ogenki-daemon-rs

./: Cargo.toml  README.md  build.rs  ogenki-daemon-rs.service
.cargo/: config
.github/workflows/: actionlint.yml  release.yml  review.yml
ogenki-daemon-re/: Cargo.toml
ogenki-daemon-re/src/: cli.rs  main.rs
ogenki-daemon-rs/: Cargo.toml
ogenki-daemon-rs/src/: format.rs  main.rs  sender.rs
twelite-serial/: Cargo.toml
twelite-serial/src/: error.rs  lib.rs  status_notify.rs
