[package]
name = "ogenki-daemon-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["env", "derive"] }
reqwest = { version = "0.13.0", default-features = false, features = ["rustls-tls", "multipart"] }
serialport = { version = "4.3.0", default-features = false }
tokio = { version = "1.37.0", default-features = false, features = ["rt", "macros"] }
twelite-serial = { path = "../twelite-serial" }
